# SF_MMO

./: db.sqlite3  manage.py  pyproject.toml
SF_MMORPG/: asgi.py  celery.py  settings.py  urls.py  wsgi.py
accounts/: admin.py  forms.py  models.py  tasks.py  urls.py  views.py
accounts/migrations/: 0001_initial.py  0002_alter_user_image.py
posts/: admin.py  forms.py  models.py  resources.py  signals.py  tasks.py  urls.py  views.py
posts/migrations/: 0001_initial.py  0002_post_postcategory_post_category_post_user_comment.py  0003_remove_comment_rating.py  0004_remove_post_draft.py
posts/templatetags/: post_tags.py
templates/: base.html
templates/accounts/: login.html  profile.html
templates/include/: footer.html  header.html  sidebar.html
templates/mail/: email_comment_add.html  email_comment_status.html
templates/posts/: comments.html  post_detail.html  post_list.html
templates/posts/tags/: last_posts.html
